# just

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-single-platform.yml  tests.yml
config/: box_world.toml  config.toml  face_world.toml  head_on.toml  multiagent_demo.toml  obstacle_config.toml  patrol.toml  roundabout_world.toml  swarm.toml
include/just/: agent.hpp  sensor.hpp  visualization.hpp  world_model.hpp
notebooks/: animate.py  vfh_exploration.ipynb
src/: agent.cpp  agent_demo.cpp  demo.cpp  grid_demo.cpp  just.cpp  sensor.cpp  swarm.cpp  world_model.cpp
